# pk-pr-simulator

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: 01-project-charter.md  02-data-legal-notes.md  03-ethics-application-draft.md  03-requirements.md  04-api-access-checklist.md  PHASE1_COMPLETION.md  PHASE2_COMPLETION.md  Zero_to_Published_Paper_Pipeline.md  architecture.md
docs/datasheets/: Pakistan_PR_Simulation_Literature_Matrix.xlsx
docs/decisions/: ADR-001-three-layer-architecture.md  ADR-002-mvp-language-scope.md  ADR-003-tech-stack.md  ADR-004-belief-vs-discourse.md  README.md
docs/literature/: README.md
docs/templates/: annotator-consent-form.md  supervisor-signoff-email.md
src/: __init__.py
src/utils/: __init__.py  config.py
tests/: test_environment.py
