[tool.poetry]
name = "pk-pr-simulator"
version = "0.1.0"
description = "Pakistan-focused cohort-level PR scenario opinion simulator"
authors = ["uzairlol"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
torch = "^2.2.0"
transformers = "^4.40.0"
datasets = "^2.19.0"
accelerate = "^0.30.0"
networkx = "^3.3"
python-igraph = "^0.11.6"
mesa = "^2.2.0"
pandas = "^2.2.0"
pyarrow = "^16.0.0"
duckdb = "^1.0.0"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
plotly = "^5.22.0"
dash = "^2.17.0"
streamlit = "^1.35.0"
pymc = "^5.16.0"
arviz = "^0.18.0"
numpyro = "^0.15.0"
shap = "^0.45.0"
scikit-learn = "^1.5.0"
wandb = "^0.17.0"
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
pyyaml = "^6.0.1"
httpx = "^0.27.0"
feedparser = "^6.0.11"
praw = "^7.7.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
black = "^24.4.0"
ruff = "^0.4.0"
mypy = "^1.10.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
